# OOP

CSV/: CMakeLists.txt  main.cpp
CircularBuffer/: CMakeLists.txt  main
CircularBuffer/test/: CMakeLists.txt
Dilemma/: CMakeLists.txt  main.cpp
Dilemma1/: AlwaysBetrayStrategy.cpp  AlwaysBetrayStrategy.h  AlwaysCooperateStrategy.cpp  AlwaysCooperateStrategy.h  CMakeLists.txt  Choice.h  CompetitionEnum.h  Defaults.h  DetailedCompetition.cpp  DetailedCompetition.h  EnviousMercifulStrategy.cpp  EnviousMercifulStrategy.h  EnviousStrategy.cpp  EnviousStrategy.h  FastCompetition.cpp  FastCompetition.h  ICompetition.h  IStrategy.h  Parsers.cpp  Parsers.h  RandomStrategy.cpp  RandomStrategy.h  RevengefulMercifulStrategy.cpp  RevengefulMercifulStrategy.h  RevengefulStrategy.cpp  RevengefulStrategy.h  StrategyEnum.h  StrategyFactory.cpp  StrategyFactory.h  TournamentCompetition.cpp  TournamentCompetition.h  UltimateRandomStrategy.cpp  UltimateRandomStrategy.h  main.cpp
Lector_0a/: CMakeLists.txt  main.cpp
Lector_0b/: CMakeLists.txt  input.txt  main.cpp
Lector_1b/: CMakeLists.txt  main.cpp
Life/: CMakeLists.txt  Rules.cpp  Rules.h  main.cpp
SoundProcessor/: CMakeLists.txt  main.cpp
SoundProcessor1/: AppParameters.h  Application.cpp  Application.h  Audio.cpp  Audio.h  CMakeLists.txt  ICommand.h  InsertCommand.cpp  InsertCommand.h  MixCommand.cpp  MixCommand.h  MuteCommand.cpp  MuteCommand.h  WavEncoder.cpp  WavEncoder.h  main.cpp
example 2/: .~lock.что делать_.docx#  что делать_.docx
example 2/_build_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lib.sln
example 2/lib/: CMakeLists.txt
homework10/: CMakeLists.txt  Document.cpp  Document.h  Section.cpp  Section.h  main.cpp  test.cpp  test.h
homework11/: CMakeLists.txt  main.cpp
homework12/: CMakeLists.txt  main.cpp
homework13/: CMakeLists.txt  main.cpp
homework2/: CMakeLists.txt  main.cpp
homework3/: CMakeLists.txt  Rational.cpp  Rational.h  main.cpp
homework5/: CMakeLists.txt  build.bat  main.cpp  module1.cppm  module2.cppm  module3.cppm
homework6/: CMakeLists.txt  EmailNotifier.cpp  EmailNotifier.h  INotifier.h  SmsNotifier.cpp  SmsNotifier.h  main.cpp
homework7/: CMakeLists.txt  main.cpp
homework7.1/: CMakeLists.txt  main.cpp
homework8/: main.cpp
homework8.1/: CMakeLists.txt  main.cpp
untitled/: main.cpp
(+34 files in other folders)
